[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[project]
name = "suoke-laoke-service"
version = "2.0.0"
description = "索克生活老克智能体服务 - 知识传播和社区管理AI智能体"
authors = [
    {name = "索克生活团队", email = "dev@suoke.life"},
]
maintainers = [
    {name = "索克生活团队", email = "dev@suoke.life"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["laoke", "agent", "knowledge", "community", "ai", "tcm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.13.3"

dependencies = [
    # Web 框架
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.9.0,<2.10.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    
    # 数据库
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "redis>=5.2.0,<6.0.0",
    
    # AI 集成
    "openai>=1.50.0,<2.0.0",
    "anthropic>=0.40.0,<1.0.0",
    
    # HTTP 客户端
    "httpx>=0.28.0,<1.0.0",
    "aiohttp>=3.11.0,<4.0.0",
    
    # 日志和配置
    "loguru>=0.7.0,<1.0.0",
    "structlog>=24.4.0,<25.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # 工具库
    "click>=8.1.0,<9.0.0",
    "rich>=13.9.0,<14.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "python-multipart>=0.0.17,<1.0.0",
    
    # 时间处理
    "python-dateutil>=2.9.0,<3.0.0",
    "pytz>=2024.2",
    
    # 无障碍服务
    "grpcio>=1.68.0,<2.0.0",
    "grpcio-tools>=1.68.0,<2.0.0",
    "protobuf>=5.29.0,<6.0.0",
]

# 已迁移到 dependency-groups
dev = [
    # 测试框架
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    
    # 代码质量
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
]

performance = [
    # 性能优化依赖
    "uvloop>=0.21.0,<1.0.0",
    "psutil>=6.0.0,<7.0.0",
]

monitoring = [
    # 监控和可观测性
    "prometheus-client>=0.21.0,<1.0.0",
]

[project.scripts]
laoke-server = "laoke_service.cmd.server.main:main"
laoke-cli = "laoke_service.cmd.cli.main:main"

[tool.ruff]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

target-version = "py313"
line-length = 88
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["S101"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
disallow_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "redis.*",
    "sqlalchemy.*",
    "prometheus_client.*",
    "openai.*",
    "anthropic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--cov=laoke_service", "--cov-report=term-missing"]
testpaths = ["test"]
asyncio_mode = "auto" 

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "types-protobuf>=6.30.2.20250516",
    "types-psutil>=7.0.0.20250516",
    "types-pyyaml>=6.0.12.20250516",
    "types-redis>=4.6.0.20241004",
]
